<resources>
    <string name="app_name">guancha</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="guancha">观察者网</string>
    <string name="dotone">.</string>
    <string name="care">全球视野\n中国关怀</string>
    <string name="news_pic">新闻图片</string>
    <string name="comment_number">评论数</string>
    <string name="channel">观察频道</string>
    <string name="title_activity_detail_with_pic">DetailWithPic</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="part_news">离线部分新闻</string>
    <string name="all_news">离线全部新闻</string>
    <string name="pic_date">1月22日</string>
    <string name="temp_shanghai">上海 大风 2度</string>
    <string name="poem_sstring">以梦为马，诗酒趁年华</string>
    <string name="author_string">艺文/摄影</string>
    <string name="poem_body">指间慢慢轨迹，如此繁复， 静书笔端流年，相思腕底，有一种， 即使是在梦里也无法都熬开的疼痛缭绕着。</string>
    <string name="author_name">-----文/维塔XXXX------</string>
    <string name="song_name">栖息</string>
    <string name="singer">郭诚（橙子）</string>
    <string name="song_time">4分8秒</string>
    <string name="content_list">评论列表</string>
    <string name="reader_name">半山的鸢尾</string>
    <string name="coment_date">1-12</string>
    <string name="coment_text">那些纠缠到深夜里的流言蜚语我不怕让你听到，也不怕让全世界听到，我是怕你听到了，并相信</string>
    <string name="praise_num">38</string>

    <string name="title_activity_test">TestActivity</string>
    <string name="guanche_reader">观网读者</string>
    <string name="personal_signature">我也不知道这一条要写什么内容</string>
    <string name="mail_address">www.123456789.com</string>
    <string name="all_content">所有评论</string>
    <string name="seen_history">浏览历史</string>
    <string name="user_name">青衫磊落险峰行</string>
    <string name="comment_time">玉璧月华明</string>
    <string name="parent_user_name">马疾香幽</string>
    <string name="parent_comment_time">2月31日</string>
    <string name="parent_comment">崖高人远</string>
    <string name="parent_zan_number">1024</string>
    <string name="cai_number">512</string>
    <string name="comment">微步觳纹生</string>
    <string name="hot_comment">热门评论</string>
    <string name="press_and_login">点击登录</string>
    <string name="input_user_name">输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login_string">登 录</string>
    <string name="register_string">注册</string>
    <string name="login">登录</string>

    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗…</string>
    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    -<string name="retrieve_pwd_email_label">
<a>点击这里</a>
</string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="input_your_comment">请输入您的评论</string>
    <string name="share_article">分享文章</string>
</resources>
