<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/header_back"
    android:padding="10dp"
    android:layout_height="180dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/user_info_card"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_guancha"
            android:layout_centerVertical="true"
            android:id="@+id/user_header"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guanche_reader"
            android:textSize="35sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/user_header"
            android:layout_toEndOf="@+id/user_header"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="35dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:id="@+id/user_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/personal_signature"
            android:textSize="14sp"
            android:textColor="#000000"
            android:id="@+id/personal_signature"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mail_address"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_above="@+id/personal_signature"
            android:text="@string/mail_address"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="110dp"
        android:layout_gravity="center"
        android:id="@+id/pre_login_layout"
        android:layout_height="140dp">
        <ImageButton
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="5dp"
            android:contentDescription="@string/dotone"
            android:id="@+id/pre_login"
            android:src="@drawable/login"
            android:scaleType="fitCenter"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/pre_login"
            android:text="@string/press_and_login"
            android:textColor="#ff000000"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</FrameLayout>
