<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_guancha"
        android:id="@+id/user_image"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:text="@string/user_name"
        android:layout_toRightOf="@+id/user_image"
        android:layout_toEndOf="@+id/user_image"
        android:layout_margin="7dp"
        android:textSize="15sp"
        android:textColor="#000000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/comment_time"
        android:textColor="#000000"
        android:layout_below="@+id/user_name"
        android:layout_toRightOf="@+id/user_image"
        android:layout_toEndOf="@+id/user_image"
        android:text="@string/comment_time"
        android:layout_margin="7dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/comment_parent_card"
        android:layout_toRightOf="@id/user_image"
        android:layout_toEndOf="@+id/user_image"
        android:layout_below="@+id/user_image"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/comment_parent_card_background"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parent_user_name"
            android:textSize="15sp"
            android:text="@string/parent_user_name"
            android:textColor="#ff0000"
            android:layout_margin="7dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parent_comment_time"
            android:text="@string/parent_comment_time"
            android:layout_toRightOf="@+id/parent_user_name"
            android:layout_toEndOf="@+id/parent_user_name"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parent_comment"
            android:textSize="17sp"
            android:textColor="#555555"
            android:text="@string/parent_comment"
            android:layout_below="@+id/parent_user_name"
            android:layout_margin="5dp"
            />
        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_zan_grey"
            android:layout_below="@+id/parent_comment"
            android:layout_margin="5dp"
            android:contentDescription="@string/all_content"
            android:id="@+id/parent_praise_icon"
            android:layout_toLeftOf="@+id/parent_praise_number"
            android:layout_toStartOf="@+id/parent_praise_number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_below="@+id/parent_comment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/parent_zan_number"
            android:id="@+id/parent_praise_number"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_below="@+id/parent_comment"
            android:layout_toLeftOf="@+id/parent_praise_icon"
            android:layout_toStartOf="@+id/parent_praise_icon"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:text="@string/cai_number"
            android:layout_margin="5dp"
            android:id="@+id/parent_cai_number"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_cai_grey"
            android:layout_margin="7dp"
            android:layout_below="@+id/parent_comment"
            android:layout_toLeftOf="@+id/parent_cai_number"
            android:layout_toStartOf="@+id/parent_cai_number"
            android:id="@+id/parent_cai_icon"
            android:contentDescription="@string/app_name"
            />
        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_share"
            android:layout_margin="7dp"
            android:layout_toLeftOf="@+id/parent_cai_icon"
            android:layout_toStartOf="@+id/parent_cai_icon"
            android:layout_below="@+id/parent_comment"
            android:id="@+id/parent_share_icon"
            android:contentDescription="@string/app_name"
            />
        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_jubao"
            android:layout_margin="7dp"
            android:layout_toLeftOf="@+id/parent_share_icon"
            android:layout_toStartOf="@+id/parent_share_icon"
            android:layout_below="@+id/parent_comment"
            android:id="@+id/parent_jubao_icon"
            android:contentDescription="@string/app_name"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment"
        android:textSize="17sp"
        android:textColor="#000000"
        android:text="@string/comment"
        android:layout_below="@+id/comment_parent_card"
        android:layout_margin="5dp"
        android:layout_alignLeft="@+id/comment_parent_card"
        android:layout_alignStart="@+id/comment_parent_card"
        />
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:src="@drawable/ic_zan_grey"
        android:layout_below="@+id/comment"
        android:layout_margin="5dp"
        android:contentDescription="@string/all_content"
        android:id="@+id/praise_icon"
        android:layout_toLeftOf="@+id/praise_number"
        android:layout_toStartOf="@+id/praise_number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_below="@+id/comment"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/parent_zan_number"
        android:id="@+id/praise_number"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_below="@+id/comment"
        android:layout_toLeftOf="@+id/praise_icon"
        android:layout_toStartOf="@+id/praise_icon"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/cai_number"
        android:layout_margin="5dp"
        android:id="@+id/cai_number"
        />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_cai_grey"
        android:layout_margin="7dp"
        android:layout_below="@+id/comment"
        android:layout_toLeftOf="@+id/cai_number"
        android:layout_toStartOf="@+id/cai_number"
        android:id="@+id/cai_icon"
        android:contentDescription="@string/app_name"
        />
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:src="@drawable/ic_share"
        android:layout_margin="7dp"
        android:layout_toLeftOf="@+id/cai_icon"
        android:layout_toStartOf="@+id/cai_icon"
        android:layout_below="@+id/comment"
        android:id="@+id/share_icon"
        android:contentDescription="@string/app_name"
        />
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:src="@drawable/ic_jubao"
        android:layout_margin="7dp"
        android:layout_toLeftOf="@+id/share_icon"
        android:layout_toStartOf="@+id/share_icon"
        android:layout_below="@+id/comment"
        android:id="@+id/jubao_icon"
        android:contentDescription="@string/app_name"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/jubao_icon"
        android:layout_toRightOf="@+id/user_image"
        android:layout_toEndOf="@+id/user_image"
        android:background="#555555"
        />
</RelativeLayout>
