<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#EAEAEA"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:id="@+id/card"
        android:layout_gravity="center"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="75dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/news_pic"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/news_image"
                android:layout_height="75dp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_touch_app_black_36dp"
                android:layout_toRightOf="@id/news_image"
                android:layout_toEndOf="@id/news_image"
                android:layout_below="@id/news_title"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:maxLines="1"
                android:layout_toRightOf="@+id/news_image"
                android:layout_toEndOf="@+id/news_image"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/app_name"
                android:id="@+id/news_title"
                />

            <TextView
                android:id="@+id/comment_num"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_below="@+id/news_title"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@+id/news_image"
                android:layout_toRightOf="@+id/news_image"
                android:gravity="center"
                android:text="@string/comment_number" />
            <TextView
                android:id="@+id/belong_to"
                android:layout_height="20dp"
                android:layout_width="70dp"
                android:layout_below="@+id/news_title"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="6dp"
                android:layout_alignRight="@id/news_title"
                android:layout_alignEnd="@id/news_title"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:text="@string/channel" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>
